[package]
name = "raymarch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wgpu = "0.16"
winit = "0.28"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"
bytemuck = {version = "1.13", features = [ "derive" ]}

anyhow = "1.0"

cgmath = "0.18"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]